  * websetup: New plugin providing a setup form on the web.
  * ikiwiki-makerepo: Bail if both srcdir and repository are not specified.
    Closes: #493628
  * Clarify some wording in the setup documentation that could maybe lead
    users to putting paths with "~/" in the setup file, which doesn't work.
    Closes: #493835

 -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2008 11:35:46 -0400

ikiwiki (2.56) unstable; urgency=low

  * autoindex: New plugin that generates missing index pages.
    (Sponsored by The TOVA Company.)
  * Escape HTML is rss and atom feeds instead of respectively using CDATA and
    treating it as XHTML. This avoids problems with escaping the end of the
    CDATA when the htmlscrubber is not used, and it avoids problems with atom
    XHTML using named entity references that are not in the atom DTD. (Simon McVittie)
  * Add test for old versions of git that don't support --cleanup=verbatim,
    and munge empty commit messages.

 -- Joey Hess <joeyh@debian.org>  Thu, 31 Jul 2008 19:25:24 -0400

ikiwiki (2.55) unstable; urgency=low

  * remove: New plugin that adds the ability to remove pages via the web.
    (Sponsored by The TOVA Company.)
  * rename: New plugin that adds the ability to rename pages via the web.
    (Sponsored by The TOVA Company.) (This one's for you, Kyle.)
  * All rcs backends need to implement rcs_remove, rcs_commitstaged,
    and rcs_rename. (Done for svn, git).
  * This version adds renamepage hooks, which can be used to modify page content,
    including links, during renames.
  * prefix_directives enabled in doc wiki, all preprocessor directives
    converted. (Simon McVittie)
  * editpage: Don't show attachments link when attachments are disabled.
  * tag: Allow tagbase to be overridden by starting a tag with "./" or "/".
    (Simon McVittie)
  * Really fix bug with links to pages with names containing colons. 
    Previous fix mised a few cases.
  * Avoid troublesome abs_path calls in wrapper setup.