@@ -20,6 +20,9 @@ ikiwiki (2.60) UNRELEASED; urgency=low
   * Clarify some wording in the setup documentation that could maybe lead
     users to putting paths with "~/" in the setup file, which doesn't work.
     Closes: #493835
+  * autoindex: Ignore internal pages, and take underlay directories into
+    account. Also, avoid making index pages for directories that contain
+    no files.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2008 11:35:46 -0400
 
